# Transcribe-tool

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  setup.sh  verify_installation.py
data/raw/: macron_08_01_2026.txt
transcribe_tool/: __init__.py  __main__.py
transcribe_tool/cli/: __init__.py  main.py
transcribe_tool/config/: __init__.py  settings.py
transcribe_tool/extractors/: __init__.py  base.py  local.py  tiktok.py  youtube.py
transcribe_tool/transcriber/: __init__.py  diarization.py  text_processor.py  whisper_transcriber.py
transcribe_tool/utils/: __init__.py  audio_processor.py  document_loader.py  language_detector.py  text_tokenization.py  tokenizer.py
