[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe-tool"
version = "1.0.0"
description = "Unified audio extraction and transcription tool for YouTube, TikTok, and local files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Antoine Lemor"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["transcription", "whisper", "youtube", "tiktok", "audio", "speech-to-text", "diarization"]

dependencies = [
    "rich>=13.0.0",
    "yt-dlp>=2024.0.0",
    "openai-whisper>=20231117",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "pydub>=0.25.0",
    "lingua-language-detector>=2.0.0",
    "spacy>=3.7.0",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
diarization = [
    "pyannote.audio>=3.1.0",
]
segmentation = [
    "wtpsplit>=2.0.0",  # SOTA sentence segmentation
]
full = [
    "pyannote.audio>=3.1.0",
    "wtpsplit>=2.0.0",
    "demucs>=4.0.0",
    "psutil>=5.9.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
transcribe-tool = "transcribe_tool.__main__:main"
tt = "transcribe_tool.__main__:main"

[project.urls]
Homepage = "https://github.com/antoine-lemor/Transcribe-tool"
Repository = "https://github.com/antoine-lemor/Transcribe-tool"

[tool.setuptools.packages.find]
where = ["."]
include = ["transcribe_tool*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
